# myfap-api-cli

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: publish.yml
myfap/: __init__.py  api.py  auth.py  auth_var.py  cli.py  parsers.py
