[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "myfap"
version = "0.1.5"
description = "CLI Tool dựa trên MyFAP API dành cho Sinh Viên FPTU"
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name="WindowScary321", email="126940686+WindowScary321@users.noreply.github.com" }
]
dependencies = [
    "typer>=0.9.0",
    "rich>=13.0.0",
    "playwright>=1.40.0",
    "requests>=2.31.0",
    "pkce>=1.0.3",
    "beautifulsoup4>=4.12.0",
    "ics>=0.7.2",
    "pytz>=2023.3"
]
requires-python = ">=3.8"

[project.scripts]
myfap = "myfap.cli:app"

[tool.setuptools.packages.find]
include = ["myfap*"]

[project.urls]
Homepage = "https://github.com/WindowScary321/myfap-api-cli"
